# ex2

./: .gitignore  Makefile  README.md  data.dvc  pyproject.toml  requirements.txt  trainer.dockerfile
.dvc/: config
.github/workflows/: tests.yml
docs/: mkdocs.yaml
docs/source/: index.md
ex2/: __init__.py  train_model.py
ex2/config/: config_model.yaml  config_training.yaml
ex2/data/: make_dataset.py
ex2/models/: model.pt  model.py
tests/: test_data.py  test_model.py
